# riva

./: .gitignore  README.md  main.py  pyproject.toml
common/: README.md  pyproject.toml
common/src/common/llm/: __init__.py  manager.py  providers.py
docs/: architecture.md
experiments/: README.md  pyproject.toml
job-genie/: README.md  pyproject.toml
job-genie/src/job_genie/: __init__.py
lighthouse-genie/: README.md  pyproject.toml
lighthouse-genie/src/lighthouse_genie/: __init__.py
money-genie/: README.md  pyproject.toml
money-genie/src/money_genie/: __init__.py
src/riva_agent/: __init__.py
src/riva_agent/api/: __init__.py  gateway.py
workout-genie/: README.md  pyproject.toml
workout-genie/src/workout_genie/: __init__.py
