[project]
name = "common"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Anirban Sikdar", email = "anirban9293@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
common = "common:main"

[build-system]
requires = ["uv_build>=0.11.8,<0.12.0"]
build-backend = "uv_build"
