[project]
name = "money-genie"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Anirban Sikdar", email = "anirban9293@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "common",
]

[project.scripts]
money-genie = "money_genie:main"

[build-system]
requires = ["uv_build>=0.11.8,<0.12.0"]
build-backend = "uv_build"

[tool.uv.sources]
common = { workspace = true }
